Fix z-index of image flags to be behind the navbar

--- a/src/resources/assets/sass/main.scss
+++ b/src/resources/assets/sass/main.scss
@@ -95,7 +95,7 @@ $transect-image-padding: 0.5em;
 
     .figure-flag {
         position: relative;
-        z-index: 1000;
+        z-index: 100;
         margin-left: $transect-image-padding;
     }
 }
